--- a/app/globals.css
+++ b/app/globals.css
@@ -7,6 +7,7 @@ body {
   background: var(--background);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
+  margin: 0;
 }
 
 @theme inline {
@@ -45,6 +46,7 @@ body {
   --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
   --color-sidebar-border: var(--sidebar-border);
   --color-sidebar-ring: var(--sidebar-ring);
+  --color-darkbrown: #1e0c04;
 }
 
 :root {
